--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Memory Game</title>
+    <title>Memorón</title>
   </head>
   <body>
     <div id="root"></div>
